making interactive and responsive

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,12 +14,12 @@
     position: relative;
     max-width: max-content;
     border-radius: 0.8rem;
+    color: rgb(16, 238, 16);
 }
 .navO {
     color: #25265eb3;
     position: relative;
     max-width: max-content;
-
     border-radius: 0.5rem;
     box-shadow: 1rem 1rem 4rem rgba(0, 0, 0, 0.25);
 }
@@ -43,13 +43,13 @@
 }
 /* nav bar scroll behaviour */
 header {
-    transition: background-color 0.9s ease, height 0.9s ease, padding 0.9s ease;
+    transition: background-color 0.9s ease, height 0.9s ease, 0.9s ease;
 }
 
 header.scrolled {
     background: #d5eaff;
 
-    transition: background-color 0.9s ease, height 0.9s ease, padding 0.9s ease;
+    transition: background-color 0.9s ease, height 0.9s ease, 0.9s ease;
 }
 
 body {
@@ -60,20 +60,18 @@ body {
     text-rendering: optimizeLegibility;
     font-size: 16px;
     line-height: 24px;
-}
-ol li {
-    text-decoration: none;
+    overflow-x: hidden;
 }
 .text_family {
     font-family: "euclid_circular_a", "Arial", "Source Sans Pro",
         "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    color: aqua;
 }
 p {
     color: rgba(37, 38, 94, 0.7);
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 3rem;
-
     padding: 1rem;
     box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0);
 }
@@ -108,7 +106,6 @@ h6 {
 }
 h1 {
     font-size: 3rem;
-
     margin-bottom: 20px;
     font-size: 40px;
     line-height: 44px;
@@ -132,8 +129,13 @@ h2 {
         display: block;
         margin: 0 1rem;
     }
-    .register-container {
+    .register-container,
+    .register-container p {
         width: 100%;
+    }
+    .register-container .link_element {
+        font-size: 1.6rem;
+        padding: 1.5rem 3rem;
     }
 
     .navbar {
@@ -143,11 +145,18 @@ h2 {
         left: 0;
         right: 0;
         display: flex;
+
         flex-direction: column;
-        gap: 2rem;
+        gap: 1.8rem;
         overflow: hidden;
         max-height: 0;
         transition: max-height 0.5s ease;
+    }
+    .navbar a:first-child {
+        padding-top: 1rem;
+    }
+    .navbar a:last-child {
+        padding-bottom: 1rem;
     }
     .navbar a {
         color: #fff;
@@ -158,7 +167,6 @@ h2 {
         color: #fff;
         gap: 2rem;
         overflow: hidden;
-        z-index: 100;
 
         position: absolute;
         top: 29.2rem;
@@ -167,12 +175,45 @@ h2 {
         display: flex;
         justify-content: space-around;
         max-height: 0;
-        transition: max-height 0.5s ease;
+        transition: max-height 0.4s ease;
+    }
+    .register {
+        border-top: 4px solid orangered;
+        border-bottom: 4px solid orangered;
+    }
+
+    p.username {
+        display: none;
+    }
+    p.border,
+    p {
+        border: none;
+        align-items: center;
+        margin-left: -4rem;
+        margin-right: 0rem;
+        font-size: 1.8rem;
+        padding-left: 4rem;
+        color: #d5eaff;
+    }
+
+    .text_family {
+        background-color: rgb(37, 35, 32);
+        color: #fff;
+        padding: -3px 53px;
+        margin-left: 5rem;
+    }
+    .pre {
+        margin-left: -3rem;
+        margin-right: -3rem;
+        font-size: 1.3rem;
+    }
+    .container {
+        text-align: center;
     }
 }
 
 .navbar.open,
 .registered.open {
-    max-height: 500px;
+    max-height: fit-content;
     transition: max-height 0.3s ease-in-out;
 }
