calculating quiz correct answer and show score under user dashboard,user able to download references and get more questions

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -140,6 +140,11 @@ h2 {
     display: none;
     cursor: pointer;
 }
+.nextprev {
+    right: 2rem;
+    bottom: 1rem;
+    margin-top: 5rem;
+}
 
 @media (max-width: 880px) {
     .about-us p.border {
